--- a/src/main/resources/com/ayoub_chaib/clinic_manager/main.fxml
+++ b/src/main/resources/com/ayoub_chaib/clinic_manager/main.fxml
@@ -7,14 +7,14 @@
          xmlns:fx="http://javafx.com/fxml/1"
          fx:controller="com.ayoub_chaib.clinic_manager.controllers.MainController">
     <tabs>
-        <Tab text="Patients" id="patientsTab">
-            <fx:include fx:id="patientsContent" source="patient_form.fxml" />
+        <Tab text="Patients" fx:id="patientsTab">
+            <fx:include fx:id="patientsContent" source="patient_form.fxml"/>
         </Tab>
         <Tab text="Consultations" id="consultationsTab">
-            <fx:include fx:id="consultationsContent" source="consultation_form.fxml" />
+            <fx:include fx:id="consultationsContent" source="consultation_form.fxml"/>
         </Tab>
-        <Tab text="Dashboard">
-            <fx:include source="dashboard.fxml" />
+        <Tab text="Dashboard" fx:id="dashboardTab">
+            <fx:include fx:id="dashboardContent" source="dashboard.fxml"/>
         </Tab>
     </tabs>
 </TabPane>
